unpackaged/main/default/objects/CampaignMember/fields/Analytics_Campaign_Medium__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Campaign_Medium__c</fullName>
    <formula>Campaign.Analytics_Campaign_Medium__c</formula>
    <label>Analytics: Campaign Medium</label>
    <type>Text</type>
</CustomField>