unpackaged/main/default/objects/CampaignMember/fields/Analytics_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Campaign_Name__c</fullName>
    <formula>Campaign.Analytics_Campaign_Name__c</formula>
    <label>Analytics: Campaign Name</label>
    <type>Text</type>
</CustomField>