unpackaged/main/default/objects/CampaignMember/fields/Analytics_Campaign_Term__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Campaign_Term__c</fullName>
    <formula>Campaign.Analytics_Campaign_Term__c</formula>
    <label>Analytics: Campaign Term</label>
    <type>Text</type>
</CustomField>