unpackaged/main/default/objects/CampaignMember/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <description>This field will indicate the type of campaign that the campaign member is a part of.</description>
    <formula>TEXT(Campaign.Type)</formula>
    <inlineHelpText>This field will indicate the type of campaign that the campaign member is a part of.</inlineHelpText>
    <label>Campaign Type</label>
    <type>Text</type>
</CustomField>