unpackaged/main/default/objects/CampaignMember/fields/Lead_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account_Status__c</fullName>
    <formula>IF(!ISBLANK(LeadId), TEXT(Lead.Status), TEXT(Contact.Account.Status__c))</formula>
    <label>Lead/Account Status</label>
    <type>Text</type>
</CustomField>