unpackaged/main/default/objects/CampaignMember/fields/Lead_ContactId18__c.field-meta.xml
<CustomField>
    <fullName>Lead_ContactId18__c</fullName>
    <formula>IF(ISBLANK(ContactId), CASESAFEID(LeadId),CASESAFEID(ContactId))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead/ContactId18</label>
    <type>Text</type>
</CustomField>