unpackaged/main/default/objects/CampaignMember/fields/Lead_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Lead_PostalCode__c</fullName>
    <formula>LEFT(Lead.PostalCode,5)</formula>
    <label>Lead PostalCode</label>
    <type>Text</type>
</CustomField>