unpackaged/main/default/objects/CampaignMember/fields/LeadOrContactOwnerIdSalesUser__c.field-meta.xml
<CustomField>
    <fullName>LeadOrContactOwnerIdSalesUser__c</fullName>
    <formula>IF(ISBLANK( ContactId ),  Lead.Owner:User.Sales_User__c ,  Contact.Owner.Sales_User__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadOrContactOwnerIdSalesUser</label>
    <type>Checkbox</type>
</CustomField>