unpackaged/main/default/objects/CampaignMember/fields/Response_Channel__c.field-meta.xml
<CustomField>
    <fullName>Response_Channel__c</fullName>
    <label>Response Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>