unpackaged/main/default/objects/CampaignMember/fields/Short_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Short_Account_Number__c</fullName>
    <description>The last 8 of the account number field.</description>
    <externalId>true</externalId>
    <inlineHelpText>The last 8 of the account number field.</inlineHelpText>
    <label>Short Account Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>