unpackaged/main/default/objects/CampaignMember/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <formula>IF( LeadId &lt;&gt; '', Lead.SICCODE__c,  Contact.Account.SICCODE__c )</formula>
    <label>SIC Code</label>
    <type>Text</type>
</CustomField>