unpackaged/main/default/objects/CampaignMember/fields/Sync_with_Marketo__c.field-meta.xml
<CustomField>
    <fullName>Sync_with_Marketo__c</fullName>
    <description>Identifies if a contact or lead is setup to sync with Marketo

SD - 1154</description>
    <formula>IF(
	OR(
		Contact.Sync_With_Marketo__c = TRUE, 
		Lead.Sync_With_Marketo__c = TRUE
	), 
	TRUE, FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula - Identifies if a contact or lead is setup to sync with Marketo</inlineHelpText>
    <label>Sync with Marketo</label>
    <type>Checkbox</type>
</CustomField>