unpackaged/main/default/objects/CampaignMember/fields/X1st_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Response_Date__c</fullName>
    <label>1st Response Date</label>
    <type>Date</type>
</CustomField>